--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "eskatewebsite",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "nodemon -w craco.config.js -w ./src/antd.customize.less --exec \"craco start\"",
+    "build": "craco build",
+    "test": "craco test",
+    "clean": "rimraf build dist coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "antd": "^4.7.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
+  },
+  "devDependencies": {
+    "@craco/craco": "^5.7.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.68",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "craco-antd": "^1.19.0",
+    "nodemon": "^2.0.6",
+    "react-scripts": "3.4.3",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.7.5",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpackbar": "^4.0.0"
   },
   "browserslist": {
     "production": [
