--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
     args:
       - functions
       - deploy
-      - [fetchRide]
+      - fetchRide
       - --source=./api/
       - --trigger-http
   - name: "gcr.io/cloud-builders/gcloud"
