--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/functions-framework": "^1.7.1",
     "dotenv": "^8.2.0",
     "googleapis": "^61.0.0",
+    "js-base64": "^3.5.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31"
   }
