--- a/bot/package.json
+++ b/bot/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "functions-framework --target=botFunction",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/functions-framework": "^1.7.1",
     "dotenv": "^8.2.0",
     "request": "^2.88.2",
     "telegraf": "^3.38.0"
