--- a/pipelines/deploy-prod.yaml
+++ b/pipelines/deploy-prod.yaml
@@ -4,7 +4,7 @@ steps:
     args:
       - functions
       - deploy
-      - fetchRides
+      - fetchRide
       - --source=./api/
       - --trigger-http
       - --runtime=nodejs12
