--- a/pipelines/deploy-test.yaml
+++ b/pipelines/deploy-test.yaml
@@ -4,7 +4,7 @@ steps:
     args:
       - functions
       - deploy
-      - fetchRidesQA
+      - fetchRideQA
       - --source=./api/
       - --trigger-http
       - --runtime=nodejs12
