--- a/bot/package.json
+++ b/bot/package.json
@@ -7,7 +7,7 @@
     "start": "functions-framework --target=botFunction",
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "npm run build",
-    "prebuild": "rm -r ./built/",
+    "prebuild": "rm -rf ./built/ || true",
     "build": "tsc --build",
     "postbuild": "cp package.json ./built/package.json",
     "deploy:qa": "gcloud functions deploy botFunctionQA --source=./built/ --trigger-http --runtime=nodejs12 --entry-point=botFunction --env-vars-file=../variables/bot.qa.yaml  --allow-unauthenticated",
