attempt to install typescript

--- a/pipelines/deploy-test.yaml
+++ b/pipelines/deploy-test.yaml
@@ -17,6 +17,13 @@ steps:
     - --prefix
     - ./bot/
     - install
+  - name: "gcr.io/cloud-builders/npm"
+    args: 
+    - --prefix
+    - ./bot/
+    - install
+    - -g
+    - typescript
   # Build
   - name: "gcr.io/cloud-builders/npm"
     args: 
