--- a/bot/package.json
+++ b/bot/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "npm run build",
     "prebuild": "rm -rf ./built/ || true",
-    "build": "tsc --build",
+    "build": "npx tsc --build",
     "postbuild": "cp package.json ./built/package.json",
     "deploy:qa": "gcloud functions deploy botFunctionQA --source=./built/ --trigger-http --runtime=nodejs12 --entry-point=botFunction --env-vars-file=../variables/bot.qa.yaml  --allow-unauthenticated",
     "deploy:prod": "gcloud functions deploy botFunction --source=./built/ --trigger-http --runtime=nodejs12 --entry-point=botFunction  --env-vars-file=../variables/bot.prod.yaml --allow-unauthenticated"
