--- a/bot/package.json
+++ b/bot/package.json
@@ -19,7 +19,8 @@
     "@google-cloud/functions-framework": "^1.7.1",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "telegraf": "^4.0.2"
+    "telegraf": "^4.0.2",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.22"
