--- a/bot/package.json
+++ b/bot/package.json
@@ -19,10 +19,11 @@
     "@google-cloud/functions-framework": "^1.7.1",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "telegraf": "^4.0.2",
-    "typescript": "^4.1.3"
+    "telegraf": "^4.0.3",
+    "typescript": "^4.1.5"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22"
+    "@types/node": "^14.14.28",
+    "@types/node-fetch": "^2.5.8"
   }
 }
