--- a/bot/package.json
+++ b/bot/package.json
@@ -19,6 +19,7 @@
     "@google-cloud/functions-framework": "^1.7.1",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "js-base64": "^3.6.0",
     "telegraf": "^4.3.0",
     "typescript": "^4.1.5"
   },
