--- a/api/package.json
+++ b/api/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/functions-framework": "^1.7.1",
+    "@types/express": "^4.17.11",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "googleapis": "^61.0.0",
     "js-base64": "^3.5.2",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.31"
+    "moment-timezone": "^0.5.31",
+    "typescript": "^4.2.4"
   }
 }
