--- a/pipelines/deploy-test.yaml
+++ b/pipelines/deploy-test.yaml
@@ -1,57 +1,54 @@
 steps:
-  # Deploy Cloud Function
-  # gcloud functions deploy fetchRideQA --source=./ --trigger-http --runtime=nodejs12 --entry-point=fetchRide --allow-unauthenticated
+  # Install TS
+  - name: "gcr.io/cloud-builders/npm"
+    args: 
+      - install
+      - -g
+      - typescript
+
+  # Build all
+  - name: "bash"
+    args:
+      - npx 
+      - tsc 
+      - --build  
+
+  # Deploy APIs
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       - functions
       - deploy
       - fetchRideQA
-      - --source=./api/
+      - --source=./built/api/
       - --trigger-http
       - --runtime=nodejs12
       - --entry-point=fetchRide
-  #Deploy Bot
-  # Install
-  - name: "gcr.io/cloud-builders/npm"
-    args: 
-    - --prefix
-    - ./bot/
-    - install
-  - name: "gcr.io/cloud-builders/npm"
-    args: 
-    - install
-    - -g
-    - typescript
-  # Build
-  - name: "gcr.io/cloud-builders/npm"
-    args: 
-      - --prefix
-      - ./bot/ 
-      - run
-      - build
-  
-  # Deploy
-  # gcloud functions deploy botFunctionQA --source=./built/ --trigger-http --runtime=nodejs12 --entry-point=botFunction --env-vars-file=../variables/bot.qa.yaml --allow-unauthenticated
+  # Deploy Bot
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       - functions
       - deploy
       - botFunctionQA
-      - --source=./bot/built/
+      - --source=./built/bot/
       - --trigger-http
       - --runtime=nodejs12
       - --entry-point=botFunction
+
   
-  # NPM Install
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["--prefix", "./client/", "install"]
-  # NPM Build
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["run", "build", "--prefix", "./client/"]
-  # GCloud Deploy
-  - name: "gcr.io/cloud-builders/gcloud"
-    args:
-      - "app"
-      - "deploy"
-      - "./client/client.yaml"
-      - "--no-promote"
+  
+      # TODO: Re-Add Client Deploys
+
+  # Deploy Client
+  # # NPM Install
+  # - name: "gcr.io/cloud-builders/npm"
+  #   args: ["--prefix", "./client/", "install"]
+  # # NPM Build
+  # - name: "gcr.io/cloud-builders/npm"
+  #   args: ["run", "build", "--prefix", "./client/"]
+  # # GCloud Deploy
+  # - name: "gcr.io/cloud-builders/gcloud"
+  #   args:
+  #     - "app"
+  #     - "deploy"
+  #     - "./client/client.yaml"
+  #     - "--no-promote"
