change how npx is called

--- a/pipelines/deploy-test.yaml
+++ b/pipelines/deploy-test.yaml
@@ -3,13 +3,11 @@ steps:
   - name: "gcr.io/cloud-builders/npm"
     args: 
       - install
-      - -g
-      - typescript
 
   # Build all
-  - name: "bash"
+  - name: 'gcr.io/cloud-builders/npm'
+    entrypoint: 'npx'
     args:
-      - npx 
       - tsc 
       - --build  
 
