--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eskatewebsite",
   "version": "1.0.0",
   "description": "",
-  "main": ".prettierrc.js",
+  "main": "",
   "scripts": {
     "build": "tsc --build",
     "postbuild": "cp ./api/package.json ./built/api/package.json && cp ./bot/package.json ./built/bot/package.json && cp ./client/package.json ./built/client/package.json"
@@ -18,6 +18,28 @@
   },
   "homepage": "https://github.com/jacobwaller/EskateWebsite#readme",
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@google-cloud/functions-framework": "^1.7.1",
+    "antd": "^4.7.3",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "googleapis": "^61.0.0",
+    "js-base64": "^3.6.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-query": "^2.25.2",
+    "telegraf": "^4.3.0",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^14.14.41",
+    "@types/node-fetch": "^2.5.10",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8"
   }
 }
