--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,5 +59,9 @@
     /* Advanced Options */
     "skipLibCheck": true, /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": [
+    "client/",
+    "node_modules"
+  ]
 }
