--- a/pipelines/deploy-prod.yaml
+++ b/pipelines/deploy-prod.yaml
@@ -1,56 +1,103 @@
 steps:
-  # Deploy Cloud Function
-  # gcloud functions deploy fetchRideQA --source=./ --trigger-http --runtime=nodejs12 --entry-point=fetchRide --allow-unauthenticated
-  - name: "gcr.io/cloud-builders/gcloud"
+  # Install TS
+  - name: "gcr.io/cloud-builders/npm"
+    args: 
+      - install
+
+  # Build all
+  - name: 'gcr.io/cloud-builders/npm'
     args:
-      - functions
-      - deploy
-      - fetchRide
-      - --source=./api/
-      - --trigger-http
-      - --runtime=nodejs12
-      - --entry-point=fetchRide
-  #Deploy Bot
-  # Install
-  - name: "gcr.io/cloud-builders/npm"
-    args: 
-    - --prefix
-    - ./bot/
-    - install
-  - name: "gcr.io/cloud-builders/npm"
-    args: 
-    - install
-    - -g
-    - typescript
-  # Build
-  - name: "gcr.io/cloud-builders/npm"
-    args: 
-      - --prefix
-      - ./bot/ 
       - run
-      - build
+      - build  
   
-  # Deploy
-  # gcloud functions deploy botFunctionQA --source=./built/ --trigger-http --runtime=nodejs12 --entry-point=botFunction --env-vars-file=../variables/bot.qa.yaml --allow-unauthenticated
+  # Deploy Bot
   - name: "gcr.io/cloud-builders/gcloud"
     args:
       - functions
       - deploy
       - botFunction
-      - --source=./bot/built/
+      - --source=./built/bot/
       - --trigger-http
       - --runtime=nodejs12
       - --entry-point=botFunction
-  
-  # NPM Install
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["--prefix", "./client/", "install"]
-  # NPM Build
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["run", "build", "--prefix", "./client/"]
-  # GCloud Deploy
+
+  # Deploy APIs
   - name: "gcr.io/cloud-builders/gcloud"
     args:
-      - "app"
-      - "deploy"
-      - "./client/client.yaml"
+      - functions
+      - deploy
+      - fetchRide
+      - --source=./built/api/
+      - --trigger-http
+      - --runtime=nodejs12
+      - --entry-point=fetchRide
+      - --allow-unauthenticated
+
+  # - name: "gcr.io/cloud-builders/gcloud"
+  #   args:
+  #     - functions
+  #     - deploy
+  #     - chargingHandler
+  #     - --source=./built/api/
+  #     - --trigger-http
+  #     - --runtime=nodejs12
+  #     - --entry-point=chargingHandler
+  #     - --allow-unauthenticated
+
+
+# steps:
+#   # Deploy Cloud Function
+#   # gcloud functions deploy fetchRideQA --source=./ --trigger-http --runtime=nodejs12 --entry-point=fetchRide --allow-unauthenticated
+#   - name: "gcr.io/cloud-builders/gcloud"
+#     args:
+#       - functions
+#       - deploy
+#       - fetchRide
+#       - --source=./api/
+#       - --trigger-http
+#       - --runtime=nodejs12
+#       - --entry-point=fetchRide
+#   #Deploy Bot
+#   # Install
+#   - name: "gcr.io/cloud-builders/npm"
+#     args: 
+#     - --prefix
+#     - ./bot/
+#     - install
+#   - name: "gcr.io/cloud-builders/npm"
+#     args: 
+#     - install
+#     - -g
+#     - typescript
+#   # Build
+#   - name: "gcr.io/cloud-builders/npm"
+#     args: 
+#       - --prefix
+#       - ./bot/ 
+#       - run
+#       - build
+  
+#   # Deploy
+#   # gcloud functions deploy botFunctionQA --source=./built/ --trigger-http --runtime=nodejs12 --entry-point=botFunction --env-vars-file=../variables/bot.qa.yaml --allow-unauthenticated
+#   - name: "gcr.io/cloud-builders/gcloud"
+#     args:
+#       - functions
+#       - deploy
+#       - botFunction
+#       - --source=./bot/built/
+#       - --trigger-http
+#       - --runtime=nodejs12
+#       - --entry-point=botFunction
+  
+#   # NPM Install
+#   - name: "gcr.io/cloud-builders/npm"
+#     args: ["--prefix", "./client/", "install"]
+#   # NPM Build
+#   - name: "gcr.io/cloud-builders/npm"
+#     args: ["run", "build", "--prefix", "./client/"]
+#   # GCloud Deploy
+#   - name: "gcr.io/cloud-builders/gcloud"
+#     args:
+#       - "app"
+#       - "deploy"
+#       - "./client/client.yaml"
