--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jacobwaller/EskateWebsite#readme",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@google-cloud/firestore": "^4.15.0",
     "@google-cloud/functions-framework": "^1.7.1",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
@@ -30,7 +31,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-query": "^2.25.2",
-    "telegraf": "^4.3.0",
+    "telegraf": "^4.4.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
