--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^16.14.0",
     "react-query": "^2.25.2",
     "telegraf": "^4.4.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
@@ -40,6 +41,7 @@
     "@types/node": "^14.14.41",
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8"
+    "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.3.1"
   }
 }
