--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@google-cloud/firestore": "^4.15.0",
+    "@google-cloud/functions-framework": "^2.0.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
