--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "googleapis": "^61.0.0",
+    "ical-generator": "^3.4.1",
     "js-base64": "^3.6.0",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-query": "^2.25.2",
@@ -38,10 +37,15 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^24.9.1",
-    "@types/node": "^14.14.41",
+    "@types/luxon": "^2.3.1",
+    "@types/node": "^14.18.12",
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "@types/uuid": "^8.3.1"
+    "@types/uuid": "^8.3.1",
+    "dayjs": "^1.11.0",
+    "moment": "^2.29.2",
+    "moment-timezone": "^0.5.34",
+    "rrule": "^2.6.9"
   }
 }
