--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ant-design/icons": "^4.6.2",
     "@google-cloud/firestore": "^4.15.0",
     "@google-cloud/functions-framework": "^2.0.0",
+    "@nlpjs/basic": "^4.23.4",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
