--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ical-generator": "^3.4.1",
     "js-base64": "^3.6.0",
     "moment-timezone": "^0.5.34",
+    "node-nlp": "^4.23.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-query": "^2.25.2",
@@ -40,7 +41,6 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^24.9.1",
     "@types/luxon": "^2.3.1",
-    "@types/node": "^14.18.12",
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
