--- a/pipelines/deploy-prod.yaml
+++ b/pipelines/deploy-prod.yaml
@@ -16,7 +16,7 @@ steps:
     args:
       - cp 
       - ./bot/handlers/model.nlp
-      - ./built/bot/handlers/model.nlp 
+      - ./built/bot/model.nlp
   
   # Deploy Bot
   - name: "gcr.io/cloud-builders/gcloud"
