--- a/pipelines/deploy-test.yaml
+++ b/pipelines/deploy-test.yaml
@@ -20,7 +20,8 @@ steps:
   
   # Deploy Bot
   - name: "gcr.io/cloud-builders/gcloud"
-    waitFor: setup
+    waitFor: 
+    - setup
     args:
       - functions
       - deploy
@@ -32,7 +33,8 @@ steps:
 
   # Deploy APIs
   - name: "gcr.io/cloud-builders/gcloud"
-    waitFor: setup
+    waitFor: 
+    - setup
     args:
       - functions
       - deploy
@@ -44,7 +46,8 @@ steps:
       - --allow-unauthenticated
 
   - name: "gcr.io/cloud-builders/gcloud"
-    waitFor: setup
+    waitFor: 
+    - setup
     args:
       - functions
       - deploy
