add concurrent to prod deploy

--- a/pipelines/deploy-prod.yaml
+++ b/pipelines/deploy-prod.yaml
@@ -17,9 +17,12 @@ steps:
       - cp 
       - ./bot/handlers/model.nlp
       - ./built/bot/model.nlp
+    id: setup
   
   # Deploy Bot
   - name: "gcr.io/cloud-builders/gcloud"
+    waitFor: 
+    - setup
     args:
       - functions
       - deploy
@@ -31,6 +34,8 @@ steps:
 
   # Deploy APIs
   - name: "gcr.io/cloud-builders/gcloud"
+    waitFor: 
+    - setup
     args:
       - functions
       - deploy
@@ -42,6 +47,8 @@ steps:
       - --allow-unauthenticated
 
   - name: "gcr.io/cloud-builders/gcloud"
+    waitFor: 
+    - setup
     args:
       - functions
       - deploy
