--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "react-dom": "^16.14.0",
     "react-query": "^2.25.2",
     "telegraf": "^4.8.3",
-    "typescript": "^4.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -47,6 +46,7 @@
     "@types/uuid": "^8.3.1",
     "dayjs": "^1.11.0",
     "moment": "^2.29.2",
-    "rrule": "^2.6.9"
+    "rrule": "^2.6.9",
+    "typescript": "^4.2.4"
   }
 }
