--- a/pipelines/deploy-test.yaml
+++ b/pipelines/deploy-test.yaml
@@ -9,14 +9,14 @@ steps:
     args:
       - run
       - build
+    id: setup
 
   # Copy NLP over
-  - name: 'bash'
-    args:
-      - cp 
-      - ./bot/handlers/model.nlp
-      - ./built/bot/model.nlp
-    id: setup
+  # - name: 'bash'
+  #   args:
+  #     - cp 
+  #     - ./bot/handlers/model.nlp
+  #     - ./built/bot/model.nlp
   
   # Deploy Bot
   - name: "gcr.io/cloud-builders/gcloud"
