--- a/pipelines/deploy-test.yaml
+++ b/pipelines/deploy-test.yaml
@@ -8,7 +8,7 @@ steps:
   - name: 'gcr.io/cloud-builders/npm'
     args:
       - run
-      - build
+      - compile
     id: setup
 
   # Copy NLP over
