--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-base64": "^3.6.0",
     "moment-timezone": "^0.5.34",
     "node-nlp": "^4.23.5",
+    "qrcode": "^1.5.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-query": "^2.25.2",
@@ -44,6 +45,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/uuid": "^8.3.1",
+    "@types/qrcode" : "^1.5.5",
     "dayjs": "^1.11.0",
     "moment": "^2.29.2",
     "rrule": "^2.6.9",
