--- a/package.json
+++ b/package.json
@@ -35,17 +35,18 @@
     "react-dom": "^16.14.0",
     "react-query": "^2.25.2",
     "telegraf": "^4.8.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^24.9.1",
     "@types/luxon": "^2.3.1",
     "@types/node-fetch": "^2.5.10",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/uuid": "^8.3.1",
-    "@types/qrcode" : "^1.5.5",
     "dayjs": "^1.11.0",
     "moment": "^2.29.2",
     "rrule": "^2.6.9",
